--- a/index.html
+++ b/index.html
@@ -92,7 +92,12 @@
                                 <span class="skill-level-html skill-mysql">60%</span>
                             </span>
                         </li>
-
+                        <li>
+                            <span class="skill-name">Vue <span class="shop-timeline">(學習中)</span></span>
+                            <span class="skill-bar">
+                                <span class="skill-level-html skill-vue">40%</span>
+                            </span>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -193,7 +198,44 @@
                     <div class="side Try1">
                         <img src="./imgs/shop.gif" alt="">
                     </div>
-                    <div class=" side back">圖8</div>
+                    <div class=" side back">
+                        <div class="shop">
+                            <h5 class="shop-title">貓狗寵物商城 <span class="shop-timeline">(2024/1~仍在進行)</span></h5>
+                            <br />
+                            <h6>
+                                <br />
+
+                                以React開發前端，Node串接後端，以Mysql為主進行資料庫設計，建立的虛擬寵物電商平台。
+                                <br />
+                                <br />
+
+                                功能簡介：
+                                <ul class="shop-intro">
+                                    <li>四種篩選排序功能</li>
+                                    <li>商品加入購物車增刪修</li>
+                                    <li>結帳資訊表單填寫驗證</li>
+                                    <li>會員查看歷史成立訂單</li>
+                                </ul>
+
+                                <br />
+                                技術內涵：
+
+                                <ol class="shop-intro">
+                                    <li>使用Bootstrap搭配Sass來客製化CSS樣式</li>
+                                    <li>使用Next.js的路由來完成SPA</li>
+                                    <li>串接RESTful API實作後端，加入搜尋結果回傳前端對接</li>
+                                    <li>使用React Hook完成購物車計算，並以Props傳遞變數</li>
+                                    <li>將商品列表&搜尋分割多個components，方便分開管理</li>
+                                </ol>
+
+
+
+
+
+                            </h6>
+                        </div>
+
+                    </div>
                 </div>
                 <div class="card">
                     <div class="side">
@@ -222,7 +264,7 @@
                     <br>
                     <div>
                         <div>
-                            <i class="fa-solid fa-location-dot"></i><span>新北市板橋區溪崑二街</span>
+                            <i class="fa-solid fa-location-dot"></i><span>新北市板橋區（近樹林火車站）</span>
                         </div>
                         <div>
                             <i class="fa-solid fa-phone-flip"></i><span>0978-071-802</span>
