add experience & skill

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                             </span>
                         </li>
                         <li>
-                            <span class="skill-name">PHP</span>
+                            <span class="skill-name">TypeScript</span>
                             <span class="skill-bar">
-                                <span class="skill-level-html skill-php">50%</span>
+                                <span class="skill-level-html skill-ts">50%</span>
                             </span>
                         </li>
                         <li>
@@ -108,14 +108,21 @@
         <div class="container article" id="article">
             <h2 class="h2-title">經歷</h2>
             <ul class="experience-list">
-                <li class="Group1">
+                <li class="Group">
+                    <div class="date">2024/6 ~ Now</div>
+                    <div class="company-logo"><img class="workcompany" src="./imgs/WiseLink.jpg" alt="logo of iSpan"></div>
+                    <div class="company-name">智通科創股份有限公司</div>
+                    <div></div>
+                    <div class="job-title">前端工程師</div>
+                </li>
+                <li class="Group">
                     <div class="date">2023/9 ~ 2024/1</div>
                     <div class="company-logo"><img class="workcompany" src="./imgs/iSpan.jpg" alt="logo of iSpan"></div>
                     <div class="company-name">資展國際股份有限公司附設臺北職業訓練中心</div>
                     <div></div>
                     <div class="job-title">前端工程師就業養成班</div>
                 </li>
-                <li class="Group2">
+                <li class="Group">
                     <div class="date">2017/8 ~ 2023/5</div>
                     <div class="company-logo"><img class="workcompany" src="./imgs/Essen.jpg" alt="logo of Essen"></div>
                     <div class="company-name">翼勝專利商標事務所</div>
